# elderly-backend

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_atividade_dia_semana.py  0003_atividade_gif_exercicio.py  0004_alter_atividade_dia_semana.py
elderly_person/: asgi.py  settings.py  urls.py  wsgi.py
